# TRTCScenesDemo

./: build.gradle  local.properties  settings.gradle
vrlib/: CMakeLists.txt  build.gradle
vrlib/src/main/: AndroidManifest.xml
vrlib/src/main/cpp/: effect-jni.cpp  native-lib.cpp
vrlib/src/main/cpp/common/: GlShaders.cpp  GlShaders.h  native_log.h
vrlib/src/main/cpp/effect/: EffectOpenGLRender.cpp  EffectOpenGLRender.h  EffectOpenGLUtils.cpp  EffectOpenGLUtils.h  EffectVecmath.cpp  EffectVecmath.h
vrlib/src/main/cpp/vr/: OpenGLUtils.cpp  OpenGLUtils.h  Sphere3D.cpp  Sphere3D.h  math3d.cpp  math3d.h  vecmath.cpp  vecmath.h
vrlib/src/main/java/com/Fliter/: CameraDisplayDoubleInput.java  FliterCameraActivity.java  PatRecordConstant.java  STGLRender.java
vrlib/src/main/java/com/Fliter/camera/: AspectRatio.java  Camera2Engine.java  Camera2Engine23.java  CameraEngine.java  CameraImageUtil.java  CameraImpl.java  Size.java  (+7 more)
vrlib/src/main/java/com/effect/: EffectRender.java
vrlib/src/main/java/com/ndk/: EffectNativeUtils.java  VrNativeUtils.java
vrlib/src/main/java/com/uitis/: EffectUtils.java
vrlib/src/main/java/com/vr/: AbsStrategy.java  CardboardMotionStrategy.java  VRLibraryUtils.java  VRRender.java  VideoTexture.java  VrMotionStrategy.java  VrMotionWithTouchStrategy.java  VrTouchStrategy.java
vrlib/src/main/res/layout/: activity_fliter_camera.xml
vrlib/src/main/res/raw/: vr_fragment_barreldistortion.glsl  vr_fragment_plane.glsl  vr_fragment_plane_shader.glsl  vr_vertex_gl_barreldistortion_shader.glsl  vr_vertex_gl_plane.glsl  vr_vertex_gl_shader.glsl
(+56 files in other folders)
